--- a/app/templates/chart.html
+++ b/app/templates/chart.html
@@ -1,1 +1,4 @@
-chart
+<canvas id="line" class="chart chart-line" chart-data="data"
+  chart-labels="labels" chart-legend="true" chart-series="series"
+  chart-click="onClick" >
+</canvas> 
