Add file for audio javascript

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,10 @@
-index
+
+  <div>
+    <form name='myAudio'>
+      <label>Mp3 Link</label>
+      <input type="text" id="audioLink" size="100"></br>
+      <input type="button" class='btn btn-primary' value="Upload Link" onclick="audioExtraction()"/></br>
+    </form>
+    <button class='btn btn-primary'>Upload File</button><br>
+    <button class='btn btn-primary'>Record Live</button><br>
+  </div>
