Add styling for average score

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
   chart-click="onClick" >
 </canvas>
   <div id='averageScore' class='img-rounded bg-success text-center'>
-  {{average}}
+  {{average}} {{sentiment}}
   </div>
   <div>
     <form name='myAudio'>
