--- a/app/index.css
+++ b/app/index.css
@@ -1,3 +1,11 @@
 .line-legend li .line-legend-text {
   position: relative;
 }
+
+#averageScore{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  padding: 5%;
+  text-align: center;
+}
