--- a/app/templates/chart.html
+++ b/app/templates/chart.html
@@ -6,10 +6,12 @@
         <canvas id="line" class="chart chart-line" chart-options="chartOptions" chart-data="data"
         chart-labels="labels" chart-legend="true" chart-series="series"
         chart-click="onClick" chart-hover = "onHover">
-        </canvas>
+      </canvas>
 
-        <div class="text-center average-color" ng-class="{red: average <= -0.2, green: average >= 0.2, yellow: -0.2 < average > 0.2  }">{{average}}</div> 
-      </div>
+      <div class="text-center">Avg:
+        <span ng-class="{red: average <= -0.2, green: average >= 0.2, yellow: -0.2 < average > 0.2  }">{{average}}</span>
+      </div> 
     </div>
   </div>
+</div>
 </div>
