Switch page on click of button

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <form name='myAudio'>
       <label>Audio Link</label>
       <input type="text" id="inputLink" size="100" value="https://www.havenondemand.com/sample-content/videos/hpnext.mp4"/></br>
-      <a id='uploadLink'class='btn btn-primary' value="Upload Link" ng-click="testSpeechRecognition()" href="#/chart" />Upload Link</a>
+      <a id='uploadLink'class='btn btn-primary' value="Upload Link" ng-click="testSpeechRecognition()" />Upload Link</a>
     </form>
     <div id="result"></div>
     <div class='center-block'>
