--- a/app/index.css
+++ b/app/index.css
@@ -6,6 +6,13 @@
   border-radius: 50%;
   width: 50px;
   height: 50px;
-  padding: 5%;
+  padding: 10%;
+  margin: 50px;
   text-align: center;
+}
+
+#averageScore div{
+  text-align: center;
+  margin-left: -25px;
+  margin-top: -25px;
 }
