--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,22 +10,25 @@
       </div>
     </div>
   </div>
-
+</div>
+<div class='col-lg-6 col-sm-12 ng-scope'>
   <div id='averageScore' class='img-rounded bg-success text-center'>
-  {{average}} {{sentiment}}
+    <div>
+      {{average}} {{sentiment}}
+    </div>
   </div>
   <div>
     <form name='myAudio'>
       <label>Audio Link</label>
-      <input type="text" id="inputLink" size="100" value="https://www.havenondemand.com/sample-content/videos/hpnext.mp4"/></br>
+      <input type="text" id="inputLink" size="50" value="https://www.havenondemand.com/sample-content/videos/hpnext.mp4"/></br>
       <input type="button" id='uploadLink'class='btn btn-primary' value="Upload Link" onclick="testSpeechRecognition()"/>
     </form>
-    <div id="result"></div>
-    <div class='center-block'>
       <button class='btn btn-primary' id='uploadFile'>Upload File</button>
-
-
       <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
     </div>
   </div>
+</div>
+<div class='col-lg-12 col-sm-12 ng-scope'>
+  <div id="result"></div>
+  <div class='center-block'>
 </div>
