--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,10 +4,10 @@
   <div>
     <form name='myAudio'>
       <label>Audio Link</label>
-      <input type="text" id="inputLink" size="100" value="https://www.havenondemand.com/sample-content/videos/hpnext.mp4"/></br>
-      <a id='uploadLink'class='btn btn-primary' value="Upload Link" ng-click="testSpeechRecognition()" />Upload Link</a>
+      <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
+      <input type="button" id='uploadLink'class='btn btn-primary' value="Upload Link" ng-click="testSpeechRecognition()"/>
     </form>
-    <div id="result"></div>
+<!--     <div id="result"></div> -->
     <div class='center-block'>
       <button class='btn btn-primary' id='uploadFile'>Upload File</button>
 
