Convert ajax calls to angular - ngrepeat not working

--- a/app/templates/chart.html
+++ b/app/templates/chart.html
@@ -13,5 +13,15 @@
 
 </div>
 
+<div id="result-text">
+  <div ng-repeat="text in resultText">
+    {{ text }}
+  </div>
+</div>
 
-<div id="result"></div>
+<div id="result-sentiment">
+  Sentiment Values:
+  <div ng-repeat ="sentiment in sentimentValues">
+    {{ sentiment }}
+  </div>
+</div>
