--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <form name='myAudio'>
       <label>Audio Link</label>
       <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
-      <input type="button" id='uploadLink'class='btn btn-primary' value="Upload Link" ng-click="testSpeechRecognition()"/>
+      <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
     </form>
 <!--     <div id="result"></div> -->
     <div class='center-block'>
