--- a/app/templates/chart.html
+++ b/app/templates/chart.html
@@ -1,9 +1,9 @@
 <div class="col-lg-6 col-sm-12 ng-scope" id="line-chart">
   <div class="panel panel-default">
-    <div class="panel-heading">You conversation sucks</div>
+    <div class="panel-heading"></div>
     <div class='panel-body'>
       <div class="chart-container">
-        <canvas id="line" class="chart chart-line" chart-options="chartOptions" chart-data="data"
+        <canvas id="line" class="chart chart-line" chart-options="chartOptions" chart-data="data" chart-result-text='resultText'
         chart-labels="labels" chart-legend="true" chart-series="series"
         chart-click="onClick" chart-hover = "onHover">
         </canvas>
