--- a/app/templates/chart.html
+++ b/app/templates/chart.html
@@ -20,6 +20,7 @@
   </div>
 
   <div class='col-lg-6 col-sm-12 ng-scope'>
+  <div class="text-center "></div>
   <div class="text-center text-score">Average:
   <div id='averageScore' class='img-rounded text-center text-score'>
     <div>
