--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,34 @@
 
-    <form name='myAudio'>
-      <label>Audio Link</label>
-      <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
-      <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
-    </form>
+<form name='myAudio'>
+  <label>Audio Link</label>
+  <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
+  <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
+</form>
 <!--     <div id="result"></div> -->
-    <div class='center-block'>
-      <button class='btn btn-primary' id='uploadFile'>Upload File</button>
-      <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
-    </div>
-  </div>
+<div class='center-block'>
+  <button class='btn btn-primary' id='uploadFile'>Upload File</button>
+  <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
+</div>
+</div>
 </div>
 <div class='col-lg-12 col-sm-12 ng-scope'>
   <div id="result"></div>
   <div class='center-block'>
-</div>
+  </div>
+
+  <body ng-app="fileUpload" ng-controller="MyCtrl">
+   <h4>Upload on file select</h4>
+   <button ngf-select="uploadFiles($files)" multiple 
+   accept="audio/*">Select Files</button>
+   <br>
+   <br>Files:
+   <ul>
+    <li ng-repeat="f in files" style="font:smaller">
+      {{f.name}}
+    </li>
+  </ul>
+  <span class="progress" ng-show="progress >= 0">
+    <div style="width:{{progress}}%" ng-bind="progress + '%'"></div>
+  </span>
+  {{errorMsg}}
+</body>
