--- a/app/index.css
+++ b/app/index.css
@@ -1,5 +1,19 @@
+img.home-page {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: -15;
+}
 .line-legend li .line-legend-text {
   position: relative;
+}
+
+.landing-page {
+  margin-top: 20%;
+}
+
+.landing-page label {
+  color: white;
 }
 
 #averageScore{
