--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,11 @@
-
-    <form name='myAudio'>
-      <label>Audio Link</label>
-      <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
-      <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
-    </form>
-    <div class='center-block'>
-      <button class='btn btn-primary' id='uploadFile'>Upload File</button>
-      <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
-    </div>
-  </div>
-</div>
-<div class='col-lg-12 col-sm-12 ng-scope'>
-  <div id="result"></div>
+<div class="text-center landing-page">
+  <form name='myAudio'>
+    <label>Audio Link</label>
+    <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
+    <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
+  </form>
   <div class='center-block'>
+    <button class='btn btn-primary' id='uploadFile'>Upload File</button>
+    <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
+  </div>
 </div>
