--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,11 +1,14 @@
-<div class="text-center landing-page">
-  <form name='myAudio'>
-    <label>Audio Link</label>
-    <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
-    <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
-  </form>
-  <div class='center-block'>
-    <button class='btn btn-primary' id='uploadFile'>Upload File</button>
-    <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
+<img class="home-page" src="https://pixabay.com/static/uploads/photo/2015/12/03/09/33/microphone-1074362_960_720.jpg"/>
+<div class="container">
+  <div class="text-center landing-page">
+    <form name='myAudio'>
+      <label>Audio Link</label>
+      <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
+      <a href="#/chart" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
+    </form>
+    <div class='center-block'>
+      <button class='btn btn-primary' id='uploadFile'>Upload File</button>
+      <button class='btn btn-primary' id='recordFile'>Record Live</button><br>
+    </div>
   </div>
 </div>
