Adjust instructions and clean up code

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,20 +4,21 @@
       <label>
       Word Clip - Easily analyze your speech sentiment and how you are perceived.<br><br>
 
-      Instructions: Upload your audio file or link.<br><br>
-      Look at the chart to see how your words is being perceived based on a
-      <br> scaled of 1 to -1. (1 being positive, -1 being negative.)
+      Instructions: <br>
+      1.) Upload your audio file or link.<br><br>
+      2.) Hover over chart to see how your words is being perceived
+      <br>on a scaled of 1 to -1 (positive & negative verbiage).
 
 
       </label>
     </div>
 
   <div class="text-center landing-page">
-    <form name='myAudio'>
+<!--     <form name='myAudio'>
       <label>Audio Link</label>
       <input type="text" id="inputLink" size="100" ng-model="audioUrl"/></br>
       <a href="#/sample" id='uploadLink'class='btn btn-primary'/>Upload Link</a>
     </form>
-
+ -->
   </div>
 </div>
